--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -61,7 +61,7 @@ Schema linting runs automatically as part of your graph's [schema checks](#linti
 ### Linting via schema checks
 
 If you set up [schema checks](./schema-checks) for your graph, schema linting automatically runs as a separate check type alongside build and operation checks. You can view the results of all check types from your graph's **Checks** page in Studio.
-For example, the screenshot below shows successful build and operations checks with a failed linting check.
+For example, the screenshot below shows failed and warning linting checks.
 
 <img
     src="../img/linter-check-results.jpg"
