Adjust image widths

--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -20,6 +20,7 @@ In [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content), you
   className="screenshot"
   src="../img/schema-checks/check-configuration-page.jpg"
   alt="Check configuration page in GraphOS Studio"
+  width="700"
 />
 
 ### Configuration options
