Update schema page screenshots

--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -258,7 +258,7 @@ The **Visualization** tab provides a graphical representation of your schema's s
 It can help clarify your understanding of your schema's design, so you can more easily identify potential issues and improve your data model.
 
 <img
-  src="../../img/schema-page/visualization.png"
+  src="../../img/schema-page/visualization.jpg"
   className="screenshot"
   alt="Schema visualization in Studio"
 />
