Change README to Overview page

--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -11,7 +11,7 @@ Without understanding a schema's intricacies—particularly how subgraphs relate
 
 GraphOS Studio provides several ways of understanding and exploring your organization's graphs, including:
 
-- An editable **README** page that describes the graph to newcomers
+- An editable **Overview** page that describes the graph to newcomers
 - The **Schema** page, which includes three distinct views, including schema visualization
 - The **Explorer**, which helps you build new operations against your graph
 - The **Changelog**, which displays all published changes
@@ -30,9 +30,9 @@ After selecting an organization in GraphOS Studio, click a particular graph vari
 
 With Serverless and Dedicated plans, all Studio organization members have access to all pages, including **Settings** for all graphs within the organization. Enterprise accounts can set [member roles](../org/members/#organization-wide-member-roles) to configure fine-grained access for individual members of their organization.
 
-## The README page
+## The Overview page
 
-When a user opens one of your graph's variants in GraphOS Studio, its **README** page appears:
+When a user opens one of your graph's variants in GraphOS Studio, its **Overview** page appears:
 
 <img className="screenshot" alt="GraphQL codeblock in README" src="../../img/readme-example.jpg" width="500" />
 
