--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -95,7 +95,7 @@ Use the **Configuration** tab to manage your cloud router's configuration, inclu
 
 ## Step 4. Test and validate
 
-To test whether your graph works as intended, run a sample query by clicking **Run in Explorer** from your graph's **README** page.
+To test whether your graph works as intended, run a sample query by clicking **Run in Explorer** from your graph's **Overview** page.
 
 [Enable subgraph error reporting](./lattice-troubleshooting/#enable-subgraph-error-inclusion) if you run into issues.
 
