--- a/src/content/graphos/explorer/operation-collections.mdx
+++ b/src/content/graphos/explorer/operation-collections.mdx
@@ -111,9 +111,9 @@ Team members must be signed in to Studio to view a linked collection or operatio
 
 </Note>
 
-### Embedding in the README page
+### Embedding in the Overview page
 
-Each graph variant in Studio has a [README page](../graphs/studio-features/#the-readme-page) that you can customize to document that variant. You can embed a variant's shared collections and operations in its README using [shortcodes](../graphs/studio-features/#readme-shortcodes) that are shown in the README editor.
+Each graph variant in Studio has a [**Overview** page](../graphs/studio-features/#the-readme-page) that you can customize to document that variant. You can embed a variant's shared collections and operations in its README using [shortcodes](../graphs/studio-features/#readme-shortcodes) that are shown in the README editor.
 
 ### Public collections
 
