--- a/src/content/shared/studio-pages.mdx
+++ b/src/content/shared/studio-pages.mdx
@@ -2,7 +2,7 @@
 
 | Page                            | Description                                                                                                                                                                                                              |
 | ------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| **README**                      | Displays the variant's editable Markdown-formatted README, its graph ref and router URL, and other important details about it. [Learn more.](/graphos/graphs/studio-features/#the-readme-page)                           |
+| **Overview**                      | Displays the variant's editable Markdown-formatted README, its graph ref and router URL, and other important details about it. [Learn more.](/graphos/graphs/studio-features/#the-readme-page)                           |
 | **Schema**                      | Documentation for all your supergraph's types and fields. Supports filtering definitions by name, subgraph, and other values. [Learn more.](/graphos/graphs/studio-features/#the-schema-page)                            |
 | **Explorer**                    | A powerful IDE for building and executing operations against your supergraph. [Learn more.](/graphos/explorer/)                                                                                                          |
 | **Changelog**                   | Displays a historical diff of additions, modifications, and deletions made to your supergraph's schema.                                                                                                                  |
