--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -31,7 +31,7 @@ Both the GraphOS Router and Apollo Server use the same mechanism to enable opera
 
    </Note>
 
-2. Obtain the _graph ref_ for the graph and variant you want to report metrics for. You can find your variant's graph ref at the top of the variant's README page in Studio. It has the format `graph-id@variant-name` (such as `my-graph@staging`).
+2. Obtain the _graph ref_ for the graph and variant you want to report metrics for. You can find your variant's graph ref at the top of the variant's **Overview** page in Studio. It has the format `graph-id@variant-name` (such as `my-graph@staging`).
 
 3. Use the obtained values to set the following environment variables in your environment before starting up your router/server:
 
