--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -91,7 +91,7 @@ Compared 1 schema changes against 24 operations
 View full details at https://studio.apollographql.com/service/docs-example-graph/checks/<DETAILS>
 ```
 
-Each change to the schema is labeled either `PASS` or `FAIL`. For a complete list of schema change codes, see the [Reference](./checks-reference#schema-change-types).
+Each change to the schema is labeled either `PASS` or `FAIL`. For a complete list of schema change codes, see the [Reference](./checks-reference#types-of-schema-changes).
 
 <Note>
 
