--- a/src/content/graphos/delivery/checks-reference.mdx
+++ b/src/content/graphos/delivery/checks-reference.mdx
@@ -87,7 +87,7 @@ A user has chosen to [ignore](#overriding-flagged-changes) schema change(s) for 
 </table>
 
 
-## Schema change types
+## Types of schema changes
 
 When you run a schema check, the check response classifies each schema change with the following codes.
 
