--- a/src/content/graphos/delivery/schema-proposals/implementation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/implementation.mdx
@@ -32,7 +32,7 @@ A proposal's ID is always prefixed with `p-` and followed by a number. You can f
 
 ## Validate changes with checks
 
-GraphOS provides [schema checks](../schema-checks) to help you identify breaking changes. You [run checks on local changes](../schema-checks#the-checks-lifecycle) before publishing them.
+GraphOS provides [schema checks](../schema-checks) to help you identify breaking changes. You [run checks on local changes](../check-configurations#the-checks-lifecycle) before publishing them.
 
 Since schema checks [run automatically on every revision](./creation#schema-checks) in a proposal, if your last revision's checks pass, any changes you implement locally from a proposal should pass too.
 Regardless, it's best to run checks before publishing changes to make sure errors haven't crept in.
