--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -31,7 +31,7 @@ Both the GraphOS Router and Apollo Server use the same mechanism to enable opera
 
    </Note>
 
-2. Obtain the _graph ref_ for the graph and variant you want to report metrics for. You can find your variant's graph ref at the top of the variant's README page in Studio. It has the format `graph-id@variant-name` (such as `my-graph@staging`).
+2. Obtain the _graph ref_ for the graph and variant you want to report metrics for. You can find your variant's graph ref at the top of the variant's **Overview** page in Studio. It has the format `graph-id@variant-name` (such as `my-graph@staging`).
 
 3. Use the obtained values to set the following environment variables in your environment before starting up your router/server:
 
@@ -50,7 +50,7 @@ Now, when your router or server starts up, it automatically begins reporting ope
 
 #### Enhanced reporting with the GraphOS Router
 
-If you use the GraphOS Router to report operation metrics, you can configure [enhanced operation signature normalization](/router/configuration/overview/#enhanced-operation-signature-normalization) and [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) for more comprehensive insights and operation checks.
+If you use the GraphOS Router to report operation metrics, you can configure [enhanced operation signature normalization](/router/configuration/overview/#enhanced-operation-signature-normalization) and [extended reference reporting](/router/configuration/overview/#extended-reference-reporting) for more comprehensive insights and operations checks.
 
 ### From a third-party server (advanced)
 
