--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -320,9 +320,9 @@ To publish our subgraph schema, we'll first use Rover to introspect the running 
 
     - If the command fails, make sure you've [authenticated Rover with GraphOS](#authenticate-rover-with-graphos). All Rover commands that interact with GraphOS require a valid API key.
 
-    If you open your graph's details in Studio now, you'll see types and fields from the `locations` subgraph listed on the **Schema** page:
+    If you go to your graph's **Schema** page in Studio now, you'll see types and fields from the `locations` subgraph listed:
 
-    <img class="screenshot" alt="locations subgraph schema in Studio" src="../../img/schema-page/reference.jpg" width="300"/>
+    <img class="screenshot" alt="locations subgraph schema in Studio" src="../../img/schema-page/reference.jpg" width="700"/>
 
 4. Do the same thing for the `reviews` subgraph, again substituting your graph ref:
 
