--- a/src/content/graphos/delivery/contract-setup.mdx
+++ b/src/content/graphos/delivery/contract-setup.mdx
@@ -251,6 +251,7 @@ On your graph's **Checks** page in Studio, you can see the status of contract ch
   className="screenshot"
   alt="Downstream checks shown in Studio UI"
   src="../img/schema-checks/contract-check-ui.jpg"
+  width="600"
 />
 
 Click a particular check to view more details.
